--- a/linux-pine64/config
+++ b/linux-pine64/config
@@ -1662,9 +1662,9 @@ CONFIG_BT_HIDP=m
 CONFIG_BT_HS=y
 CONFIG_BT_LE=y
 CONFIG_BT_6LOWPAN=m
-# CONFIG_BT_LEDS is not set
+CONFIG_BT_LEDS=y
 # CONFIG_BT_SELFTEST is not set
-# CONFIG_BT_DEBUGFS is not set
+CONFIG_BT_DEBUGFS=y
 
 #
 # Bluetooth device drivers
@@ -1678,10 +1678,17 @@ CONFIG_BT_HCIBTUSB_BCM=y
 CONFIG_BT_HCIBTUSB_RTL=y
 CONFIG_BT_HCIBTSDIO=m
 CONFIG_BT_HCIUART=m
+CONFIG_BT_HCIUART_SERDEV=y
 CONFIG_BT_HCIUART_H4=y
+# CONFIG_BT_HCIUART_NOKIA is not set
 CONFIG_BT_HCIUART_BCSP=y
 CONFIG_BT_HCIUART_ATH3K=y
+# CONFIG_BT_HCIUART_LL is not set
+CONFIG_BT_HCIUART_3WIRE=y
 CONFIG_BT_HCIUART_INTEL=y
+# CONFIG_BT_HCIUART_BCM is not set
+CONFIG_BT_HCIUART_RTL=y
+# CONFIG_BT_HCIUART_QCA is not set
 # CONFIG_BT_HCIUART_AG6XX is not set
 CONFIG_BT_HCIUART_MRVL=y
 CONFIG_BT_HCIBCM203X=m
@@ -1691,6 +1698,7 @@ CONFIG_BT_HCIVHCI=m
 CONFIG_BT_MRVL=m
 CONFIG_BT_MRVL_SDIO=m
 CONFIG_BT_ATH3K=m
+# CONFIG_BT_MTKUART is not set
 CONFIG_BT_HCIRSI=m
 # CONFIG_AF_RXRPC is not set
 # CONFIG_AF_KCM is not set
@@ -3415,7 +3423,8 @@ CONFIG_SERIAL_ARC_NR_PORTS=1
 # CONFIG_SERIAL_CONEXANT_DIGICOLOR is not set
 CONFIG_SERIAL_MVEBU_UART=y
 CONFIG_SERIAL_MVEBU_CONSOLE=y
-# CONFIG_SERIAL_DEV_BUS is not set
+CONFIG_SERIAL_DEV_BUS=y
+CONFIG_SERIAL_DEV_CTRL_TTYPORT=y
 # CONFIG_TTY_PRINTK is not set
 CONFIG_HVC_DRIVER=y
 # CONFIG_HVC_DCC is not set
@@ -4243,6 +4252,7 @@ CONFIG_MFD_VX855=m
 # CONFIG_MFD_WM8994 is not set
 # CONFIG_MFD_ROHM_BD718XX is not set
 CONFIG_MFD_VEXPRESS_SYSREG=y
+# CONFIG_RAVE_SP_CORE is not set
 CONFIG_REGULATOR=y
 # CONFIG_REGULATOR_DEBUG is not set
 CONFIG_REGULATOR_FIXED_VOLTAGE=y
