--- a/dkms-rtl8723cs/PKGBUILD
+++ b/dkms-rtl8723cs/PKGBUILD
@@ -1,10 +1,10 @@
 _gitname=rtl8723cs
 pkgname=dkms-rtl8723cs
-pkgver=2018.09.11
+pkgver=2018.11.07
 pkgrel=1
 pkgdesc="Linux driver for Realtek RTL8723CS chip"
 arch=('any')
-url="https://github.com/anarsoul/$_gitname"
+url="https://github.com/icenowy/$_gitname"
 license=('GPL')
 install=dkms-rtl8723cs.install
 depends=('linux>4.14' 'dkms' 'linux-headers>4.14')
@@ -12,7 +12,8 @@ makedepends=('git')
 options=(!strip)
 source=("git+${url}.git" "dkms.conf")
 
-md5sums=('SKIP' '7bd926532bc021b116f82bf1b049c8bf')
+md5sums=('SKIP'
+         '7bd926532bc021b116f82bf1b049c8bf')
 
 pkgver() {
    cd "$srcdir/$_gitname"
